--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-pip install --upgrade Flask
-pip install --upgrade Flask-Mail
-pip install --upgrade Flask-Script
-pip install --upgrade Flask-SQLAlchemy
-pip install --upgrade Werkzeug
-pip install --upgrade jinja2
-
-
+Flask
+Flask-Mail
+Flask-Script
+Flask-SQLAlchemy
+#Werkzeug
+#jinja2
