--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-Flask
-Flask-Mail
-Flask-Script
-Flask-SQLAlchemy
-Flask-Admin
-#Werkzeug
-#jinja2
+Flask==0.8
+Flask-Admin==1.0.1
+Flask-Mail==0.6.1
+Flask-SQLAlchemy==0.16
+Flask-Script==0.3.3
+Flask-WTF==0.6
+Jinja2==2.6
+SQLAlchemy==0.7.8
+WTForms==1.0.1
+Werkzeug==0.8.3
+argparse==1.2.1
+blinker==1.2
+chardet==1.0.1
+lamson==1.1
+lockfile==0.9.1
+mock==0.8.0
+nose==1.1.2
+python-daemon==1.6
+wsgiref==0.1.2
